unpackaged/main/default/objects/Credential__mdt/Credential__mdt.object-meta.xml
<CustomObject>
    <description>Stores TLN microservice callout credentials</description>
    <label>Credential</label>
    <pluralLabel>Credentials</pluralLabel>
</CustomObject>