unpackaged/main/default/objects/Credential__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>