unpackaged/main/default/objects/Credential__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>64</length>
    <type>Text</type>
</CustomField>