unpackaged/main/default/objects/Credential__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>client_credentials</fullName>
                <default>true</default>
                <label>client_credentials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>