unpackaged/main/default/objects/Credential__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>64</length>
    <type>Text</type>
</CustomField>