unpackaged/main/default/objects/Credential__mdt/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <label>Token Endpoint</label>
    <length>128</length>
    <type>Text</type>
</CustomField>